# tinker-studio

./: .env.example  .gitignore  README.md  ROADMAP.md  clear_tinker_stop_request.bat  collect_interview_qa.py  interview_prompt_rounds.json  launch_interview_collect.bat  launch_sampler_test.bat  launch_streamlit_dashboard.bat  launch_tinker_dashboard.bat  launch_tinker_endpoint.bat  launch_tinker_experiment.bat  launch_tinker_monitor.bat  launch_tinker_notebook.bat  monitor_tinker_dashboard.py  monitor_tinker_runs.py  pyproject.toml  requirements.txt  run_tinker_experiment.py  sampler_prompt_sets.json  serve_tinker_endpoint.py  stop_tinker_training.bat  streamlit_tinker_dashboard.py  test_sampler_checkpoint.py  tinker.bat  tinker_experiment_manager.py  tinker_interview_data.py  tinker_launcher.py  tinker_notebook_diagnostics.py  tinker_notebook_env.py  tinker_notebook_resume.py  tinker_notebook_workflows.py  tinker_source_imports.py  tinker_stop_cli.py  tinker_stop_control.py  tinker_system_awake.py  tinker_train_and_eval.ipynb  tinker_training_utils.py
codex_skills/: README.md
codex_skills/tinker-codex-skills/tinker-dataset-planning/: SKILL.md
codex_skills/tinker-codex-skills/tinker-interview-collection/: SKILL.md
codex_skills/tinker-codex-skills/tinker-notebook-recovery/: SKILL.md
data/: README.md
docs/: TODO.md
unix/: README.md  launch_interview_collect.sh  launch_sampler_test.sh  launch_streamlit_dashboard.sh  launch_tinker_dashboard.sh  launch_tinker_endpoint.sh  launch_tinker_experiment.sh  launch_tinker_monitor.sh  launch_tinker_notebook.sh  tinker
(+12 files in other folders)
