[project]
name = "tinker-studio"
version = "0.1.0"
description = "Local notebook, dashboard, and launcher tools for Tinker fine-tuning experiments."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "tinker==0.16.1",
  "tinker-cookbook==0.2.2",
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.9",
  "python-dotenv>=1.0",
  "jupyter>=1.1",
  "ipywidgets>=8.1",
  "streamlit>=1.35",
  "rich>=13.7",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
